<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        android:orientation="vertical">


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/ll_mynotes"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_bg"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/mynotes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_notes"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myassessments"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/myassessments" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_assignment"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/ll_myvideos"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_bg"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_lecture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_video_lectures"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myattendance"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/attendance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_attendance"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/ll_myresults"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_bg"
                android:padding="10dp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/results" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_results"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_myhomework"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/homework" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_homework"
                    android:textSize="14sp"
                    android:textColor="#fff"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>